--- a/html/perfil.html
+++ b/html/perfil.html
@@ -49,7 +49,7 @@
 
             <section class="navIcon">
 
-                <img src="/image/UserSVG.svg" alt="" class="userAvatar">
+                <img src="/image/iconUs.svg" alt="" class="userAvatar">
 
                 <h6 class="mailPerfil">user@example.com</h6>
             </section>
