--- a/html/promociones.html
+++ b/html/promociones.html
@@ -52,7 +52,7 @@
 
         <section class="navIcon">
 
-            <img src="/image/userSVG.svg" alt="" class="userAvatar">
+            <img src="/image/iconUs.svg" alt="" class="userAvatar">
 
             <img src="/image/CartSVG.svg" alt="" class="shoppingIcon">
 
