--- a/html/tecnologia.html
+++ b/html/tecnologia.html
@@ -49,7 +49,7 @@
 
         <section class="navIcon">
 
-            <img src="/image/UserSVG.svg" alt="" class="userAvatar">
+            <img src="/image/iconUs.svg" alt="" class="userAvatar">
 
             <img src="/image/CartSVG.svg" alt="" class="shoppingIcon">
 
