--- a/html/juguetes.html
+++ b/html/juguetes.html
@@ -25,7 +25,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100&family=Righteous&display=swap" rel="stylesheet">
 
-    <title>ShoppingTop / Home appliances</title>
+    <title>ShoppingTop / Toys</title>
 </head>
 <body>
     <header>
